--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
 /* Generic global styling*/
-@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Marcellus&family=Merriweather&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Martel:wght@600;700&family=Montserrat:wght@800&display=swap");
 
 :root {
 	--grey-100: #f0f0f0;
@@ -11,17 +10,22 @@
 	--primary-blue-100: #7ebaeb;
 	--primary-blue-300: #5299d3;
 	--primary-blue-500: #2484d3;
-	--primary-blue-700: #1d6cad;
+	--primary-blue-700: #18578c;
 
-	--accent-green-100: #2dbedb;
-	--accent-green-300: #2194ac;
-	--accent-green-500: #176e80;
-	--accent-green-700: #0b5563;
+	--accent-green-100: #71e68a;
+	--accent-green-300: #4fb665;
+	--accent-green-500: #2f8842;
+	--accent-green-700: #196129;
 
-	--font-title: "Merriweather";
-	--font-body: "Marcellus";
+	--accent-red-100: #ff9090;
+	--accent-red-300: #f85656;
+	--accent-red-500: #d33333;
+	--accent-red-700: #d11a1a;
+
+	--font-title: "Montserrat";
+	--font-body: "Martel";
 }
 
 html {
-	background-color: var(--grey-100);
+	background-color: var(--grey-300);
 }
